--- a/20240618/portfolio.html
+++ b/20240618/portfolio.html
@@ -75,6 +75,8 @@
             <p>20240521</p>
             <li><a href="../20240521/layout-tag.html">用TAG排版</a></li>
             <li><a href="../20240521/layout-div.html">用DIV排版</a></li>
+            <br>
+            <li><a href="https://www.figma.com/design/lxYGqYXn5evJ1Dh37Ihw8j/%E5%80%8B%E4%BA%BA%E7%B6%B2%E7%AB%99?node-id=0-1&t=um4Pyyi5C0yVs3uN-0">Figma 原型</a></li>
         </ul>
     </main>
 
